Dark Mode: fix Library quest shop popup borders

--- a/src/modules/native-dark-mode/styles/quests.css
+++ b/src/modules/native-dark-mode/styles/quests.css
@@ -9,6 +9,10 @@
   color: var(--d-link);
 }
 
+.mh-dark #overlayPopup.zugzwangsLibraryQuestShopPopup .jsDialogContainer .suffix {
+  border-color: var(--d-border);
+}
+
 .mh-dark #overlayPopup.zugzwangsLibraryQuestShopPopup a.questLink {
   background-color: var(--d-alt);
   border-color: var(--d-border);
@@ -17,10 +21,6 @@
 .mh-dark #overlayPopup.zugzwangsLibraryQuestShopPopup .jsDialogContainer .suffix,
 .mh-dark #overlayPopup.zugzwangsLibraryQuestShopPopup .questLink .content {
   background-color: var(--d-alt);
-}
-
-.mh-dark #overlayPopup.zugzwangsLibraryQuestShopPopup .jsDialogContainer .content {
-  padding: 10px;
 }
 
 .mh-dark #overlayPopup.zugzwangsLibraryQuestShopPopup #jsDialogAjaxPrefix {
